--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
             <a class="navbar-brand">Annual Report Search</a>
             <form class="form-inline">
                 <input id="search-input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
             </form>
         </nav>    
         <nav id="pagination" aria-label="Page navigation example">
