--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -13,3 +13,13 @@ em{
 .mr-2{
     margin-bottom: .5rem!important
 }
+
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    padding-top: 10px;
+    width: 100%;        
+    text-align: center;
+}
+
