--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -14,6 +14,11 @@ em{
     margin-bottom: .5rem!important
 }
 
+.filter-header{
+    padding: .5rem 0.25rem !important;
+    text-align: center;
+}
+
 .footer{
     position: fixed;
     left: 0;
