--- a/src/main/resources/templates/index-new.html
+++ b/src/main/resources/templates/index-new.html
@@ -18,10 +18,7 @@
 <body>
 <div class="wrapper">
 <nav class="navbar navbar-light bg-light justify-content-between">
-    <a class="navbar-brand">Annual Report Search</a>
-    <button id="filters-btn" class="btn btn-outline-success btn-sm" type="button">
-                Show Filters&nbsp;&nbsp;&#8681;
-    </button>
+    <a class="navbar-brand">Annual Report Search</a>    
     <form class="form-inline">
         <input id="search-input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>                
@@ -29,10 +26,10 @@
 </nav>     
 <div class="container-fluid">    
     <div class="row">
-        <aside class="col-sm-3">            
-            <div class="card">
+        <aside class="col-sm-3" style="margin-top:80px;">
+            <div class="card">                
                 <article class="card-group-item">
-                    <header class="card-header"><h6 class="title">Year</h6></header>
+                    <header class="card-header filter-header"><h6 class="title">Year</h6></header>
                     <div class="filter-content">
                         <div class="card-body">
                             <label class="btn btn-outline-success btn-sm">
@@ -51,7 +48,7 @@
                     </div>
                 </article> <!-- card-group-item.// -->
                 <article class="card-group-item">
-                    <header class="card-header"><h6 class="title">Company Name</h6></header>
+                    <header class="card-header filter-header"><h6 class="title">Company Name</h6></header>
                     <div class="filter-content">
                         <div class="list-group list-group-flush">
                         <a href="#" class="list-group-item">Cras justo odio <span class="float-right badge badge-light round">142</span> </a>
@@ -63,7 +60,54 @@
                 </article> <!-- card-group-item.// -->
                 
             </div> <!-- card.// -->
-        </aside> <!-- col.// -->	
+        </aside> <!-- col.// -->
+        <div class="col-sm-9">
+                <nav id="pagination" aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center"></ul>
+                </nav>               
+                <div id="result-container" class="container"></div>
+                <div id="modal-container"></div>
+                
+                <!-- template for modal -->
+                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">...</div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>                    
+                        </div>
+                        </div>
+                    </div>
+                </div>        
+                <!-- template for modal -->
+    
+                <!-- template for cards -->
+                <div id="result-template" style="display:none" class="row">
+                    <div class="col-sm">
+                        <div class="card text-center">
+                            <h5 class="card-header">Company Name</h5>
+                            <div class="card-body">
+                                <!-- <h5 class="card-title">AR Year</h5> -->
+                                <p class="card-text"></p>
+                                <!-- <a href="#" class="btn btn-primary">Annual Report PDF</a>  -->
+                                <!-- <a href="#" class="btn btn-primary">View Page (text)</a> -->
+                            </div> 
+                            <div class="card-footer text-muted"></div>                       
+                        </div>
+                    </div>                                          
+                </div> 
+                <!-- template for cards -->
+    
+                <nav id="pagination" aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center"></ul>
+                </nav>   
+        </div>	
     </div> <!-- row.// -->
 
 </div> 
@@ -72,5 +116,6 @@
 <div class="footer bg-light">
     <p>Handcrafted with <i class="fa fa-heart" style="color: red"></i> by <a href="https://anshulkhare.in/">Anshul</a></p>
 </div>
+<script src="/js/main-new.js"></script>
 </body>
 </html>
